--- a/style.css
+++ b/style.css
@@ -26,10 +26,14 @@ body {
   text-transform: uppercase;
 }
 
-.ns
-{
+.ns {
   box-shadow: none !important;
 }
+
+.ws {
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.3) !important;
+}
+
 /*Navbar*/
 
 /*Logo*/
@@ -108,24 +112,48 @@ body {
 }
 
 .btn-color:hover {
-  border:var(--white) solid 2px;
+  border: var(--white) solid 2px;
 }
 
 
-.form-control {
+.form-control, .qty-dropdown, .select {
   border: solid 3px var(--grey);
   border-radius: 1em;
+  height: 2.6em;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
-.form-control:hover {
+.textarea, .select {
+  height: auto !important;
+}
+
+.form-control:hover, .form-control:focus, .qty-dropdown:hover, .qty-dropdown:focus, .color-select:hover {
   border: solid 3px var(--orange);
 }
 
-.formulario
-{
-  background-color: var(--grey);
+.formulario {
   border-radius: 1em;
+  border: var(--grey) solid 3px;
+  background-color: var(--white);
 }
+
+.color-select {
+  border-radius: 1em !important;
+  border: var(--grey) solid 3px !important;
+  background-color: var(--white) !important;
+  height: 13em;
+}
+
+select option {
+  border: solid 3px rgba(0, 0, 0, 0) !important;
+}
+
+select option:hover {
+  opacity: 70%;
+}
+
+
 /*card*/
 .card {
   border: none;
@@ -302,8 +330,7 @@ body {
   height: 34em;
 }
 
-.producto-ficha
-{
+.producto-ficha {
   background-color: var(--grey);
 }
 
@@ -332,8 +359,7 @@ body {
   color: var(--white);
 }
 
-.btn-filtro:focus,.btn-filtro2:focus
-{
+.btn-filtro:focus, .btn-filtro2:focus {
   background-color: var(--purple);
   color: var(--white);
   border-bottom: rgba(0, 0, 0, 0) solid 2px;
