--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@
   font-size: 1em;
   color: #ffffff !important;
   padding: 0em 2em 0em 2em;
+  background-color: red;
 }
 
 .nav-link {
@@ -603,4 +604,6 @@ body {
   background: #303030;
 }
 
-/*# sourceMappingURL=style.css.map */
+.nav-item{
+  background-color: red;
+}
