--- a/style6.css
+++ b/style6.css
@@ -574,3 +574,10 @@ select option:hover {
         font-size: 2.5em !important;
     }
 }
+
+
+/* Required * */
+.required:after {
+content:" *";
+color: red;
+}
