--- a/styles_login.css
+++ b/styles_login.css
@@ -7,7 +7,7 @@
     font-family: 'Poppins', sans-serif
 }
 
-#forgot {
+#forgot, #createaccount {
     min-width: 100px;
     margin-left: auto;
     text-decoration: none
